2006-02-10  Derek Scherger  <derek@echologic.com>

	* netsync.cc (process_anonymous_cmd, process_auth_cmd): don't
	report misleading permission denied errors for branches that are
	not being served
	* paths.cc (find_and_go_to_workspace): delete stale comment
	* tests/t_netsync_permissions.at: add test pull of branch that is
	not served

2006-02-10  Richard Levitte  <richard@levitte.org>

	* monotone.texi (Hooks): Change the example for
	get_revisions_cert_trust to check "branch" certs instead of
	"ancestor" ones, and thereby match the effect of the "approve"
	command.

2006-02-10  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc (CMD(checkout)): wrapping in a transaction makes
	a big difference.

2006-02-09  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (SQLITE_SOURCES): Remove header files lost in
	latest SQLite upstream import.

2006-02-09  Graydon Hoare  <graydon@pobox.com>

	* lua.cc (hook_validate_commit_message): make validated the
	default.

2006-02-09  Richard Levitte  <richard@levitte.org>

	* tests/t_cvsimport.at, tests/t_cvsimport3.at,
	tests/t_cvsimport_deleted_invar.at,
	tests/t_cvsimport_manifest_cycle.at, tests/t_cvsimport_samelog.at,
	tests/t_singlecvs.at: Changed to cope with the strictness of
	CVSNT.  It doesn't create a CSVROOT/history file automagically,
	but CVSROOT/modules is created automatically both by the older CVS
	and by CVSNT.  You can't check out a group of files using revision
	numbers with CVSNT.  You MUST stand in the work directory for some
	command with CVSNT.  Finally, with CVSNT, 'cvs init' generates the
	following message if you're a normal user, at least on Debian:

	cvs init: Unable to register repository.
	cvs init: Your login may not have sufficient permissions to modify the
	cvs init: global server settings.
	cvs init: Repository /home/levitte/cvsfoo initialised

2006-02-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Remove duplicate line.

2006-02-08  Matthew Gregan  <kinetik@orcon.net.nz>
