@@ -53,7 +53,7 @@ AT_CHECK(test -f MT/work, [1], [ignore], [ignore])
 AT_CHECK(MONOTONE status, [], [ignore], [ignore])
 AT_CHECK(mv bar barfoo)
 AT_CHECK(MONOTONE rename bar barfoo, [], [ignore], [stderr])
-AT_CHECK(grep 'adding bar -> barfoo to workspace rename set' stderr, [0], [ignore])
+AT_CHECK(grep 'renaming bar to barfoo in workspace manifest' stderr, [0], [ignore])
 AT_CHECK(MONOTONE status, [], [ignore], [ignore])
 
 # move file to wrong place before renaming it
@@ -62,7 +62,7 @@ AT_CHECK(MONOTONE revert ., [], [ignore], [ignore])
 AT_CHECK(MONOTONE status, [], [ignore], [ignore])
 AT_CHECK(mv bar barfoofoo)
 AT_CHECK(MONOTONE rename bar barfoo, [], [ignore], [stderr])
-AT_CHECK(grep 'adding bar -> barfoo to workspace rename set' stderr, [0], [ignore])
+AT_CHECK(grep 'renaming bar to barfoo in workspace manifest' stderr, [0], [ignore])
 AT_CHECK(MONOTONE status, [1], [ignore], [ignore])
 
 AT_CLEANUP
